--- a/css/forca.css
+++ b/css/forca.css
@@ -131,8 +131,8 @@ footer {
 }
 @media (min-width: 769px) {
   .teclas button {
-    width: 68px;
-    height: 68px;
+    width: 60px;
+    height: 60px;
     font-size: 2em;
   }
   #palavra-secreta {
@@ -146,6 +146,21 @@ footer {
     font-size: 2em;
   }
 }
-.tecla-Q {
-  text-transform: uppercase;
+@media (min-width: 990px) {
+  .teclas button {
+    width: 68px;
+    height: 68px;
+    font-size: 2.5em;
+  }
+  #palavra-secreta {
+    font-size: 2em;
+  }
+  .letras {
+    width: 35px;
+  }
+
+  #categoria {
+    font-size: 2em;
+  }
 }
+
